--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
-**/xcuserdata/*
+*~
+.DS_Store
+/build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+*xcuserdata*
+profile
+*.moved-aside
+DerivedData
+.idea/
+*.hmap
+*.patch
+*xcshareddata*
+*gitconfig
+*gitignore
+*.diff
+rm_temp.sh
+Pods
+PodsBak
+Podfile.lock
